# pytorch-cpp

./: .gitignore  CMakeLists.txt  README.md  setup.py
bindings/: CMakeLists.txt
bindings/pybind/: CMakeLists.txt  autograd_bindings.cpp  bindings.cpp  nn_bindings.cpp  optim_bindings.cpp  tensor_bindings.cpp
docs/: autograd_debug_case.md  bug_fixes.md  build_instructions.md  cmake_explanation.md  common_errors.md  implementation_details.md  project_structure.md  python_binding.md
examples/cpp/: CMakeLists.txt  autograd_example.cpp  linear_regression.cpp  matrix_ops.cpp  mnist_classification.cpp
examples/python/: linear_regression.py
include/pytorchcpp/: autograd.h  nn.h  optim.h  tensor.h
src/: CMakeLists.txt
src/autograd/: CMakeLists.txt  function.cpp  variable.cpp
src/nn/: CMakeLists.txt  activation.cpp  linear.cpp  loss.cpp  module.cpp  sequential.cpp
src/optim/: CMakeLists.txt  adam.cpp  optimizer.cpp  sgd.cpp
src/tensor/: CMakeLists.txt  tensor.cpp
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  autograd_test.cpp  nn_test.cpp  optim_test.cpp  tensor_test.cpp
